crates/plotnik-lib/tests/02-parser/recovery_validation/def_name_snake_case.txt
my_expr = (identifier)
==== diagnostics ====
error: definition names must be PascalCase
 --> query.ptk:1:1
  |
1 | my_expr = (identifier)
  | ^^^^^^^
  |
help: use `MyExpr`
  |
1 - my_expr = (identifier)
1 + MyExpr = (identifier)
  |
help: definitions become types in the output
